fixes overflow in FF

--- a/styles/index.processed.css
+++ b/styles/index.processed.css
@@ -44,6 +44,7 @@ p {
   height: 115px;
   width: 240px;
   top: 60px;
+  overflow: clip;
 }
 
 #title h2 {
@@ -77,6 +78,7 @@ p {
   margin-bottom: 40px;
   width: 110px;
   font-size: 0.7em;
+  overflow: clip;
 }
 
 .legend-key {
@@ -226,6 +228,7 @@ h3 {
     padding: 0px 0 5px 0;
     margin: 0;
     line-height: 1.5em;
+    overflow: clip;
   }
 
   #title h2 {
@@ -259,6 +262,7 @@ h3 {
     margin-bottom: 40px;
     width: 150px;
     font-size: 1em;
+    overflow: clip;
   }
 
   button.about {
